Fix extra-long USB chooser dialog

It appears that setting a minimum size on the DialogViewClient in
CreateClientView causes the GridLayout to use that size for all cells.
This means that both the DeviceChooserContentView and the button row
below it are set to the same height, effectively doubling the size of
the window.

Removing the call to set_minimum_size seems to restore the window to its
proper size.

BUG=714147

Review-Url: https://codereview.chromium.org/2836733003
Cr-Commit-Position: refs/heads/master@{#466597}

Former-commit-id: b06115fcd1a2aee65694061710aa1342528f8afe